<resources>
    <string name="app_name">e-Library</string>
    <string name="home_menu">Home</string>
    <string name="information_menu">Information</string>
    <string name="text_title_splashscreen">Selamat Datang</string>
    <string name="text_subtitle1_splashscreen">Membaca adalah nafas hidup\n dan jembatan emas kemasa depan</string>
    <string name="text_subtitle2_splashscreen">Kunjungi Perpustakaan SMKN 4 Palembang\n untuk membaca buku, anda juga bisa membaca online disini</string>
    <string name="main_menu">Menu Utama</string>
    <string name="e_book">E-BOOK</string>
    <string name="e_paper">E-Paper</string>
    <string name="literacy">Literasi</string>
    <string name="comic_education">Pendidikan</string>
    <string name="comic_international">International</string>
    <string name="short_story">Cerpen</string>
    <string name="web_school">Web Sekolah</string>
    <string name="opac">Opac</string>
    <string name="library_video_profile">Video Profil</string>
    <string name="information">Informasi</string>
    <string name="jam_operational">Jam Operasional</string>
    <string name="senin_jum_at">Senin - Jum\'at</string>
    <string name="open_07_00_15_30_wib">buka: 07:00 – 15:30 WIB</string>
    <string name="istirahat_12_00_13_00_wib">istirahat: 12:00 – 13:00 WIB</string>
    <string name="address_smkn4">Pipa Jaya, Kec. Kemuning, Kota Palembang, Sumatera Selatan sekolah Smk Negri 4 Palembang</string>
    <string name="address">Alamat</string>
    <string name="library">Perpustakaan</string>
    <string name="contact">Kontak</string>
    <string name="email_pustakawan">Email : -</string>
    <string name="Sosmed_pustakawan">Sosmed : -</string>
    <string name="whatsapp">Hubungi</string>
    <string name="member_library">Untuk dapat meminjam koleksi buku perpustakaan kami, Anda terlebih dahulu harus menjadi Anggota perpustakaan. Ada syarat dan ketentuan yang harus Anda patuhi.</string>
    <string name="admin_login">Admin Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="username_is_not_empty">username tidak boleh kosong</string>
    <string name="password_is_not_empty">password tidak boleh kosong</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="admin_panel">Admin Panel</string>
    <string name="announcement">Pengumuman</string>
    <string name="management_books">Kelola Buku</string>
    <string name="management_members">Kelola Anggota</string>
    <string name="management_visitors">Kelola Pengunjung</string>
    <string name="management_borrow_book">Kelola Peminjaman</string>
    <string name="books">Buku</string>
    <string name="members">Anggota</string>
    <string name="list_visitors">Daftar Pengunjung</string>
    <string name="borrow_book">Meminjam</string>
    <string name="logout">Keluar</string>
    <string name="failure_info_login_admin">username / password tidak terdaftar, coba lagi</string>
    <string name="failure_info_login_member">ID Anggota / password tidak terdaftar</string>
    <string name="success_info_login_admin">status login</string>
    <string name="logout_message">yakin ingin keluar dari admin panel?</string>
    <string name="logout_message_member">yakin ingin keluar dari area anggota?</string>
    <string name="insert_book">Tambah Buku</string>
    <string name="title_book">judul buku</string>
    <string name="book_publisher">penerbit buku</string>
    <string name="isbn_number">nomor ISBN</string>
    <string name="book_language">bahasa (indonesia)</string>
    <string name="book_category">kategori buku</string>
    <string name="stok_book">stok buku</string>
    <string name="availability_book">ketersedian</string>
    <string name="save_book">Simpan</string>
    <string name="description_book">deskripsi singkat tentang buku</string>
    <string name="insert_visitor">Tambah Pengunjung</string>
    <string name="take_picture_visitor">Ambil Poto</string>
    <string name="visitor_name">nama pengunjung</string>
    <string name="indentitas_visitor">nis/nidn pengunjung</string>
    <string name="student">Siswa</string>
    <string name="teacher">Guru</string>
    <string name="role_visitor">Siapa Yang berkunjung?</string>
    <string name="save">Simpan</string>
    <string name="is_not_empty">tidak boleh kosong *</string>
    <string name="insert_member">Tambah Anggota</string>
    <string name="member_name">nama anggota</string>
    <string name="id_member">nis/nidn anggota</string>
    <string name="searchview_hint">masukkan kata kunci untuk mencari buku</string>
    <string name="searchbar_hint">cari buku</string>
    <string name="subject_book">Pilih subjek yang menarik bagi Anda</string>
    <string name="social_sciences">Sosial</string>
    <string name="applied_science">Terapan</string>
    <string name="religion_science">Agama</string>
    <string name="philosophy_science">Filsafat</string>
    <string name="language_science">Bahasa</string>
    <string name="kesustaraan_science">Kesustaraan</string>
    <string name="computer_science">Komputer</string>
    <string name="pure_science">Ilmu Murni</string>
    <string name="sport_science">Olahraga</string>
    <string name="art_science">Kesenian</string>
    <string name="loading">Loading...</string>
    <string name="success_insert_data">Berhasil Menambahkan Data</string>
    <string name="close">OK</string>
    <string name="item_isbn">ISBN : %s</string>
    <string name="item_category">Kategori: %s</string>
    <string name="item_stock">stok %s</string>
    <string name="item_title">Judul : %s</string>
    <string name="puskatawan">Pustakawan</string>
    <string name="members_area">Area Anggota</string>
    <string name="pustakawan_name">Nama\t\t: -</string>
    <string name="pustakawan_position">Posisi\t: -</string>
    <string name="pustakawan_email">Email\t\t: -</string>
    <string name="contact_member">nomor telpon/wa</string>
    <string name="list_contact_member">kontak\t\t: %s</string>
    <string name="list_registrasi_member">registrasi\t\t: %s</string>
    <string name="list_password_member">Password : %s</string>
    <string name="list_id_member">ID Anggota: %s</string>
    <string name="id_is_registered">ID %s sudah terdaftar</string>
    <string name="information_member_login">Masukkan ID anggota serta kata sandi yang diberikan oleh pustakawan. Jika anda anggota perpustakaan namun belum memiliki kata sandi, hubungi staf pustakawan</string>
    <string name="id_member_login">ID anggota</string>
    <string name="tab_title_all">Semua</string>
    <string name="tab_title_students_visitor">Siswa</string>
    <string name="tab_title_teachers_visitor">Guru</string>
    <string name="tab_title_today_visitor">Hari Ini</string>
    <string name="print_visitor_today">Rekap Data Pengunjung Hari Ini</string>
    <string name="print_all_visitor">Rekap Data Semua Pengunjung</string>
    <string name="visitor">Pengunjung</string>
    <string name="message_confirm_has_been_returned">Konfirmasi buku telah di kembalikan oleh Peminjam %s, tindakan ini akan menghapus data dari pinjaman buku</string>
    <string name="title_confirm_has_been_returned">Buku Telah Dikembalikan</string>
    <string name="title_confirm_extend">Perpanjang Peminjaman</string>
    <string name="message_confirm_extend">tindakan ini akan memperpanjang masa peminjaman buku %s</string>
    <string name="confirm_delete_data">Yakin ingin menghapus data %s</string>
    <string name="admin_search_books">cari berdasarkan %s</string>
    <string name="update_password">ubah password</string>
    <string name="long_borrow">lama meminjam: 0 hari</string>
    <string name="scan">scan</string>
    <string name="item_borrowing_date">%s S.d %s</string>
    <string name="item_title_book">Judul Buku : %s</string>
    <string name="item_isbn_number">Nomor ISBN : %s</string>
    <string name="item_condition">Kondisi Buku : %s</string>
    <string name="tab_title_borrowing">Aktif Meminjam</string>
    <string name="tab_title_borrowing_due_date">Jatuh Tempo</string>
    <string name="tab_title_booking_book">Booking Buku</string>
    <string name="description_title_catalog">Akses Katalog Publik Daring</string>
    <string name="sub_title_catalog">akses katalog publik daring Perpustakaan SMKN 4 Palembang</string>
    <string name="publisher">Penerbit : %s</string>
    <string name="isbn">ISBN/ISSN : %s</string>
    <string name="search_catalog_by">cari berdasarkan %s</string>
    <string name="title_activity_detail_opac">DetailOpacActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>